# navbot

./: LICENSE  README.md  draw_reward.py  notes.md  深度学习笔记.odt
materials/record/: E2E_PPO_nav1.txt  E2E_PPO_nav2.txt  E2E_PPO_rnn_nav1.txt  E2E_PPO_rnn_nav2.txt  E2E_PPO_rnn_test_nav1.txt  E2E_PPO_rnn_test_nav2.txt  PPO_nav1.txt  PPO_nav2.txt  config.txt
materials/tools/: calculate_SPL.py  draw_reward.py  draw_success_rate.py
rl_nav/: CMakeLists.txt  config.py  env.py  package.xml
rl_nav/launch/: nav_gazebo.launch  show_all.launch  spawn_goal.launch
rl_nav/scripts/: DDPG.py  DQN.py  E2E_DDPG_rnn.py  E2E_DQN.py  E2E_PPO.py  E2E_PPO_rnn.py  PPO.py  PPO_episode.txt  PPO_remap.py  PPO_remap_episode1000.txt  PPO_rnn.py  PPO_rnn_remap.py  caculate_SPL.py  config.py  draw_reward.py  env.py  env_rnn.py  test.py
rl_nav/scripts/worldModels/: 01_generate_data.py  02_train_vae.py  03_generate_rnn_data.py  04_train_rnn.py  RNN.py  RNN_old.py  VAE.py  VAE2.py  test_rnn.py  test_vae.py
rl_nav/scripts/worldModels/models/: rnn_weights_129.h5  rnn_weights_loss5.733.h5
rl_nav/worlds/: goal.urdf  maze0.world  maze1.world  maze2.world  maze3.world  maze4.world  maze5.world  maze6.world  maze7.world  maze8.world
tools/: calculate_SPL.py  draw_reward.py  draw_success_rate.py
turtlebot_description/: CMakeLists.txt  package.xml  readme.md
turtlebot_description/meshes/sensors/: sensor_pole.dae
turtlebot_description/robots/: kobuki_hexagons_kinect.urdf.xacro
turtlebot_description/urdf/: turtlebot_gazebo.urdf.xacro
turtlebot_description/urdf/kobuki/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
